cluster/manifests/strimzi-cluster-operator/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-cluster-operator
  labels:
    name: strimzi-cluster-operator
    # strimzi-cluster-operator creates pods without restricted security contexts
    pod-security.kubernetes.io/enforce: baseline
